[gd_scene load_steps=4 format=3 uid="uid://bg5mybua70v85"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_hj6df"]
[ext_resource type="Theme" uid="uid://ccq35is2jcenx" path="res://UI/UI_game_theme.theme" id="1_qm58q"]
[ext_resource type="FontFile" uid="uid://ciyqjsdocfv5b" path="res://UI/Griffy-Regular.ttf" id="2_cb3h3"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hj6df")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.298039, 0.290196, 0.541176, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -403.5
offset_right = 403.5
offset_bottom = 159.0
grow_horizontal = 2
theme = ExtResource("1_qm58q")
theme_override_font_sizes/font_size = 115
text = "Friends at 3 AM"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = 6.0
offset_right = 401.0
offset_bottom = 184.0
grow_vertical = 2
rotation = 0.0166868

[node name="Options" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_qm58q")
theme_override_fonts/font = ExtResource("2_cb3h3")
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_qm58q")
text = "Quit"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -178.0
offset_right = 401.0
grow_vertical = 2
rotation = -0.0199072

[node name="Join Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qm58q")
text = "Join Game"

[node name="Create Game" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_qm58q")
text = "Create Game"

[connection signal="pressed" from="VBoxContainer2/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer2/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="VBoxContainer/Join Game" to="." method="_on_join_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Create Game" to="." method="_on_create_game_pressed"]
